Added new pages

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       <dialog>
         <img src="./images/icon-close.svg" alt="close button" class="close">
         <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Careers</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./About.html">About</a></li>
+        <li><a href="./Contact.html">Contact</a></li>
+        <li><a href="./Construction.html">Blog</a></li>
+        <li><a href="./Construction.html">Careers</a></li>
       </ul>
       </dialog>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Careers</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./About.html">About</a></li>
+        <li><a href="./Contact.html">Contact</a></li>
+        <li><a href="./Construction.html">Blog</a></li>
+        <li><a href="./Construction.html">Careers</a></li>
       </ul>
       <button>Request Invite</button>
     </nav>
@@ -187,9 +187,9 @@
         <a href="#"><img src="./images/icon-instagram.svg" alt="icon-instagram" /></a>
       </div>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="./About.html">About Us</a></li>
+        <li><a href="./Contact.html">Contact</a></li>
+        <li><a href="./Construction.html">Blog</a></li>
       </ul>
       <ul>
         <li><a href="#">Careers</a></li>
@@ -202,36 +202,6 @@
       </div>
       </div>
     </footer>
-    <script>
-      const navbtn = document.querySelector(".nav-button");
-      const closebtn = document.querySelector(".close");
-      // const nav_links = document.querySelector("nav ul");
-      // const nav = document.querySelector("nav");
-      const dialog = document.querySelector("dialog");
-      navbtn.addEventListener("click", () => {
-        // nav_links.classList.add("active");
-        // navbtn.classList.add("not-active");
-        // closebtn.classList.add("active");
-        // closebtn.style.paddingTop = "2rem";
-        dialog.showModal();
-      });
-      closebtn.addEventListener("click", () => {
-        // nav_links.classList.remove("active");
-        // navbtn.classList.remove("not-active");
-        // closebtn.classList.remove("active");
-        dialog.close();
-      });
-      dialog.addEventListener("click", e => {
-      const dialogDimensions = dialog.getBoundingClientRect()
-      if (
-        e.clientX < dialogDimensions.left ||
-        e.clientX > dialogDimensions.right ||
-        e.clientY < dialogDimensions.top ||
-        e.clientY > dialogDimensions.bottom
-      ) {
-        dialog.close()
-      }
-    })
-    </script>
+    <script type="text/javascript" src="./script.js" />
   </body>
 </html>
